--- a/app/partials/directives/ms-long-division-decimal.html
+++ b/app/partials/directives/ms-long-division-decimal.html
@@ -152,7 +152,7 @@
                         <span class=digitblank>{{downArrow}}</span>
                     </td>
                     <td ng-show="showBlankSpace">
-                        <span class=digitblank>&nbsp;</span>
+                        <span class="spaceblank borderBlank">&nbsp;</span><span class="spaceblank borderBlank" style="visibility:hidden;">.</span><span class="spaceblank borderBlank">&nbsp;</span>
                     </td>
                     <td ng-switch-when=true>
                             <span>
