--- a/app/partials/directives/ms-long-division-decimal.html
+++ b/app/partials/directives/ms-long-division-decimal.html
@@ -127,7 +127,7 @@
 <table class=table-collapse-separate>
     <tr>
         <td style="width:120px;text-align:right;"></td>
-        <td class=quotient>
+        <td class=quotient style="padding-left:0px;">
             <span>&nbsp;</span>
             <span ng-bind-html-unsafe="quotientDone | stylecharacter:quotientOffset:true"></span>
             <span ng-switch on=showQuotient()> 
