--- a/app/partials/directives/ms-order-operations.html
+++ b/app/partials/directives/ms-order-operations.html
@@ -13,6 +13,9 @@
         vertical-align: middle;
         display: inline-block;
     }
+	ms-button.bigger button.btn{
+		font-size:110%;
+	}
 </style>
 <div class="alert alert-info">{{instructions | changeSigns}}</div>
 <table>
