--- a/app/css/directives/general.css
+++ b/app/css/directives/general.css
@@ -127,6 +127,9 @@ ul.nav-list li {
 button.btn {
 	font-size:75%;
 }
+button.btn.btn-.bigger {
+	font-size:125%;
+}
 .underline {
 	text-decoration:underline;
 }
