11-1, two lines for input now working, but problem with enter advancing as though correct operation button was clicked

--- a/app/css/directives/ms-order-operations-simple.css
+++ b/app/css/directives/ms-order-operations-simple.css
@@ -1,3 +1,6 @@
-ms-order-operations-simple table {
+.ms-order-ops-simple table {
 	text-align:center;
+}
+.ms-order-ops-simple div.noShow {
+	visibility:hidden;
 }
