change "problem" tab to "solution"

--- a/app/partials/directives/ms-problem.html
+++ b/app/partials/directives/ms-problem.html
@@ -1,6 +1,6 @@
 <div>
     <ul class="nav nav-tabs">
-        <li ng-class="{ active: isCurrent('problem') }"><a href="#problem" data-toggle="tab" ng-click="updateTab('problem')" onclick="return false;">Problem</a></li>
+        <li ng-class="{ active: isCurrent('problem') }"><a href="#problem" data-toggle="tab" ng-click="updateTab('problem')" onclick="return false;">Solution</a></li>
         <li ng-class="{ disabled: !workbook, active: isCurrent('wb') }" ng-switch on=!workbook>
             <a ng-switch-when=false href="#workbook" data-toggle="tab" ng-click="updateTab('wb')" onclick="return false;">Workbook</a>
             <a ng-switch-when=true ng-click="updateTab('wb')" onclick="return false;">Workbook</a>
