--- a/app/partials/directives/ms-multiplication-decimals.html
+++ b/app/partials/directives/ms-multiplication-decimals.html
@@ -9,6 +9,14 @@ table.td_padding td {
 	padding-left:4px;
 	padding-right:4px;
 }
+.addPaddingLeft {
+	padding-left:4px;
+	padding-right:1px;
+}
+.addPaddingRight {
+	padding-left:1px;
+	padding-right:4px;
+}
 .noShow {
 	visibility:hidden;
 }
