--- a/app/partials/directives/ms-multiply-decimals-power-ten.html
+++ b/app/partials/directives/ms-multiply-decimals-power-ten.html
@@ -1,3 +1,10 @@
+<style>
+.largeDecimal {
+	font-size:125%;
+	padding:0px;
+}
+</style>
+
 	<span>
     	<table class="text_align_center separateTable">
 			<tr>
