change "Next Problem" controls html button label to "Next"

--- a/app/partials/directives/ms-controls.html
+++ b/app/partials/directives/ms-controls.html
@@ -13,7 +13,7 @@
         ng-show=hasNextProblem
     >
         <i class="icon-arrow-right icon-white"></i>
-        Next Problem
+        Next
     </button>
     <button
         class="btn btn-warning btn-block"
