add controls parameter "fixBottomRight": true (similar to "checkAnswer" and "help")- adds class "fixed" and location bottom right to controls

--- a/app/partials/directives/ms-panel.html
+++ b/app/partials/directives/ms-panel.html
@@ -11,7 +11,7 @@
                     </div>
                     <ms-expression expected={{answer}} class=row-fluid></ms-expression>              
                 </div>
-                <ms-controls data={{controls}} class=span3></ms-controls>
+                <ms-controls data={{controls}} class=span3 ng-class="fixBottomRight()"></ms-controls>
             </span>
             <span ng-show=showHelpPanel class="{{helpPanelClass}}">
                 <div>
