--- a/app/css/directives/general.css
+++ b/app/css/directives/general.css
@@ -22,6 +22,13 @@ body {
 	margin-left:80px;
 }
 
+.fixBottomRight {
+	position:fixed;
+	bottom:0;
+	right:0;
+	margin-right:20px;
+}
+
 .equivalence-table th {
 	color: #069;
 	font-size: 105%;
