--- a/app/partials/directives/ms-find-lcm.html
+++ b/app/partials/directives/ms-find-lcm.html
@@ -1,7 +1,9 @@
 <div>
     <div class="alert alert-info">{{instructions}}</div>
     <table class=factors>
-        <tr ng-repeat="step in completed">
+        <tr ng-repeat="step in completed" ng-class="borderIndexed($index)">
+        	<td>
+            </td>
             <td class=divisor>
                 {{step.factor}}
             </td>
@@ -10,6 +12,9 @@
             </td>
         </tr>
         <tr ng-class="borderOrNot()">
+            <td>
+            	<span ng-show="done">LCM</span><span ng-show="done" style="font-size:125%;"> &nbsp; =  &nbsp;</span>
+            </td>
             <td class=divisor>
                 <span>
                     <ms-expression expected={{factorExp}} label={{factorExpLabel}}></ms-expression>
@@ -17,7 +22,7 @@
                 
             </td>
             <td class=dividend>
-                <span>
+                <span ng-hide="done">
                     <span ng-repeat="number in numbers" class=factoring>{{number}}</span>
                 </span>
             </td>
