order-ops-simple.js tweaks for centering of operators/numbers, and for line-height

--- a/app/css/directives/ms-order-operations-simple.css
+++ b/app/css/directives/ms-order-operations-simple.css
@@ -1,6 +1,9 @@
 .ms-order-ops-simple table {
 	text-align:center;
 }
+.ms-order-ops-simple table {
+	margin-bottom:5px;
+}
 .ms-order-ops-simple div.noShow {
 	visibility:hidden;
 }
