J.1 - graph formatting cont.

--- a/app/partials/directives/ms-graph-numberline.html
+++ b/app/partials/directives/ms-graph-numberline.html
@@ -1,40 +1,15 @@
 <style type="text/css">
-	.rotateCounterClock90 {
-		-moz-transform: rotate(-90deg); 
-		-webkit-transform: rotate(-90deg); 
-		-o-transform: rotate(-90deg);
-		transform: rotate(-90deg);
-	}
+
 	.placeholderDimensions {
-		width: 450px;
-		height: 100px;
-	}
-	.align_center {
-		text-align:center;
-	}
-	.font_weight_bold {
-		font-weight:bold;
-	}
-	.margin_left_small {
-		margin-left: 20px;
+		width: 700px;
+		height: 60px;
 	}
 </style>
 
-<table>
-	<th colspan=2 class="align_center font_weight_bold">
-	    <span class="margin_left_small">{{numgraphTitleIn}}</span>
-    </th>
-	<tr>
-    	<!-- <td>
-	        <span class="rotateCounterClock90 font_weight_bold">{{graphverticalIn}}</span>
-        </td> -->
+<table border="0">
+	<tr>    	
 		<td>
 			<div id="placeholder" class=placeholderDimensions></div>
 		</td>
 	</tr>
-    <tr>
-    	<td colspan=2 class="align_center">
-        	<span class="margin_left_small font_weight_bold">{{graphBottomText}}</span>
-        </td>
-   	</tr>
 </table>
