Greatest common factor files

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -8,6 +8,7 @@
 @import 'directives/ms-exponent.css';
 @import 'directives/ms-fraction.css';
 @import 'directives/ms-find-lcm.css';
+@import 'directives/ms-find-gcf.css';
 @import 'directives/ms-group.css';
 @import 'directives/ms-input.css';
 @import 'directives/ms-image.css';
