--- a/app/partials/directives/ms-graph-numberline.html
+++ b/app/partials/directives/ms-graph-numberline.html
@@ -9,7 +9,7 @@
 <table border="0">
 	<tr>    	
 		<td>
-			<div id="placeholder" class="placeholderDimensions"></div>
+			<div id='{{graphIdIn}}' class="placeholderDimensions"></div>
 		</td>
 	</tr>
 </table>
