c.2, change to get console.log working in $on(answer) section

--- a/app/partials/directives/ms-find-gcf.html
+++ b/app/partials/directives/ms-find-gcf.html
@@ -21,7 +21,7 @@
                         </td>
                         <td class=divisor>
                             <span>
-                                <ms-expression expected={{value.factorExp}} label={{factorExpLabel}}></ms-expression>
+                                <ms-expression expected={{value.factorExp}} label={{key}}></ms-expression>
                             </span>
                             
                         </td>
