--- a/app/partials/directives/ms-graph-numberline.html
+++ b/app/partials/directives/ms-graph-numberline.html
@@ -3,13 +3,14 @@
 	.placeholderDimensions {
 		width: 700px;
 		height: 60px;
+		/*background: red;*/
 	}
 </style>
 
-<table border="0">
+<!-- <table border="1">
 	<tr>    	
-		<td>
+		<td> -->
 			<div id='{{graphIdIn}}' class="placeholderDimensions"></div>
-		</td>
+<!-- 		</td>
 	</tr>
-</table>
+</table> -->
