J1 - completed all chart parameters

--- a/app/partials/directives/ms-graph-numberline.html
+++ b/app/partials/directives/ms-graph-numberline.html
@@ -7,10 +7,10 @@
 	}
 </style>
 
-<!-- <table border="1">
+ <table border="0">
 	<tr>    	
-		<td> -->
+		<td> 
 			<div id='{{graphIdIn}}' class="placeholderDimensions"></div>
-<!-- 		</td>
+ 		</td>
 	</tr>
-</table> -->
+</table> 
