--- a/app/partials/directives/ms-numberline.html
+++ b/app/partials/directives/ms-numberline.html
@@ -26,14 +26,11 @@
 .ui-slider-horizontal {
 	 height: .1em; 
 	 background: -webkit-gradient(radial, center center, 0, center center, 460, from(#FFF), to(#CC0000)); 
-	background: -webkit-radial-gradient(circle, #FFF, #CC0000);  
-	/* background-color: #8e8d8d;  */ 
-	  /* box-shadow: inset 0 1px 5px 0px rgba(0, 0, 0, .5),   
-	                     0 1px 0 0px rgba(250, 250, 250, .5); */  
+	 background: -webkit-radial-gradient(circle, #FFF, #CC0000);  
 }
 
 /* Handles */
-.ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default {
+.ui-slider-horizontal .ui-state-default {
 	/*border: 0; 
 	background: url(img/down-arrow.png) 50% 50% no-repeat; */
 	/* background-image:none; */
@@ -59,15 +56,14 @@
 	outline:none;
 } 
 .negativeNumMarginLeft{
-	margin-left:-.7em;
+	margin-left:-.8em;
 	list-style-type:none;
 }
 .positiveNumMarginLeft{
 	margin-left:-.3em;
 }
 
-a[title]:after {
-	
+a[title]:after {	
   content: attr(title);
   padding:.2em;
   font-size:.8em;
@@ -89,6 +85,15 @@ a[title]:after {
   background-image: -ms-linear-gradient(top, #eeeeee, #cccccc);
   background-image: -o-linear-gradient(top, #eeeeee, #cccccc);
 }
+.error{
+	display: block;
+	height: 1.2em;
+	width: 1.2em;
+	border-radius: 50%;
+	margin-top: -.25em;
+	margin-left: -.1em;
+	background: #b94a48;
+}
 </style>
 <div id="container">	
 	<div class="numberline">
@@ -99,9 +104,9 @@ a[title]:after {
 		 <ul id="numid" ng-repeat="row in numArray">
 			<li class='{{row.className}}' style= "left:{{row.leftPosition +'%'}}" >{{row.val}}</li>
 		 </ul>
-		 <a class="ui-slider-handle ui-state-default ui-corner-all" href="#" style="left: 0%;" title="X"> </a>
-		 <a class="ui-slider-handle ui-state-default ui-corner-all" href="#" style="left: 50%;" title="Y"></a>
-		 <a class="ui-slider-handle ui-state-default ui-corner-all" href="#" style="left: 100%;" title="Z"></a>   
+		 <a class="ui-slider-handle ui-state-default ui-corner-all" href="#" style="left: 0%;" title="X"><span class="{{errorclassX}} "></span></a>
+		 <a class="ui-slider-handle ui-state-default ui-corner-all" href="#" style="left: 50%;" title="Y"><span class="{{errorclassY}} "></span></a>
+		 <a class="ui-slider-handle ui-state-default ui-corner-all" href="#" style="left: 100%;" title="Z"><span class="{{errorclassZ}} "></span></a>   
 	</div>
 	 
 </div>
