testing for j.1 prob 6

--- a/app/partials/directives/ms-numberline.html
+++ b/app/partials/directives/ms-numberline.html
@@ -94,6 +94,9 @@ a[title]:after {
 	margin-left: -.1em;
 	background: #b94a48;
 }
+.numberlineInputs{
+	background:orange;
+}
 </style>
 <div id="container">	
 	<div class="numberline">
@@ -110,6 +113,7 @@ a[title]:after {
 	</div>
 	 
 </div>
+<div class=numberlineInputs></div>
 
 <!-- <br><br><br>
 Displays current value of slider Handles
