--- a/app/partials/directives/ms-numberline.html
+++ b/app/partials/directives/ms-numberline.html
@@ -95,7 +95,7 @@ a[title]:after {
 	background: #b94a48;
 }
 .numberlineInputs{
-	background:orange;
+	visibility: hidden;
 }
 </style>
 <div id="container">	
@@ -113,7 +113,10 @@ a[title]:after {
 	</div>
 	 
 </div>
-<div class=numberlineInputs></div>
+<div class=numberlineInputs>
+	<ms-expression class=numberlineValue expected={{expectedValue}}></ms-expression>
+    expectedValue is: {{expectedValue}}
+</div>
 
 <!-- <br><br><br>
 Displays current value of slider Handles
