J.1 work in progress

--- a/app/partials/directives/ms-numberline.html
+++ b/app/partials/directives/ms-numberline.html
@@ -115,10 +115,10 @@ a[title]:after {
 </div>
 <!-- <div>{{answerHelp}}</div> -->
 <!-- <div class=numberlineInputs  ng-switch on="answerHelp"> -->
-<div class=numberlineInputs  >
+<!-- <div class=numberlineInputs  >
 	<ms-expression class=numberlineValue expected={{expectedValue}}></ms-expression>
     expectedValue is: {{expectedValue}}
-</div>
+</div> -->
 
 <!-- <br><br><br>
 Displays current value of slider Handles
